@@ -70,6 +70,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 11438) Live Preview chops returned text
 * Show the right message on account creation when the user is blocked
 * (bug 11450) Fix creation of objectcache table on upgrade
+* Fix namespace selection after submit of Special:Newpages
+* Make input form of Special:Newpages nicer for RTL wikis
 
 
 === API changes in 1.12 ===
